# epochzone

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml
src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  service.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  service.rs
