[package]
name = "epochzone"
version = "0.1.0"
edition = "2021"

[lib]
name = "epochzone"
path = "src/lib.rs"

[[bin]]
name = "epochzone"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Timezone handling
chrono = "0.4"
chrono-tz = "0.10"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shuttle-runtime = "0.57.0"
shuttle-axum = "0.57.0"

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
